# tinyrender

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
include/: objmodel.cpp  objmodel.h  renderer.cpp  renderer.h  tgaimage.cpp  tgaimage.h
mojo/: line_drawing.mojo  renderer.mojo
python/: line_drawing.py  renderer.py
src/: line_drawing.cpp  main.cpp  objmodel.cpp  render_diablo.cpp  test_tgaimage.cpp  tgaimage.cpp  triangle_rasterization.cpp  wireframe_render.cpp
